Adicionado internacionalização das funções de IO

--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -13,3 +13,88 @@ ContentInTextBinary=Conteúdo em texto binário
 ParameterNotBinary=Paramêtro não é binario
 ConvertToBytes=Conversão para bytes
 FunctionToConvertTextBinaryToText=Função para converter texto binário para texto
+CreateFolder=Criar pasta
+FunctionToCreateNewFolder=Função para criar nova pasta
+PathMustBeCreatedForFolder=Caminho que deve ser criado a pasta
+MD5OfFile=MD5 do arquivo
+FunctionToReturnMD5OfFile=Função para retornar o MD5 do arquivo
+PathOfFile=Caminho do arquivo
+RemoveFolderFiles=Remover pasta de arquivos
+FunctionToRemoveFolderFiles=Função para remover pasta de arquivos
+PathOfFolder=Caminho da pasta
+Folder=Pasta
+GetMD5OfFile=Obter MD5 do arquivo
+FunctionToGetMD5OfFile=Função para obter MD5 do arquivo
+File=Arquivo
+CanReadyFile=Pode ler arquivo?
+FunctionToCheckIfCanReadFile=Função para verificar se pode ler o arquivo
+CanWriteFile=Pode escrever arquivo?
+FunctionToCheckIfCanWriteFile=Função para verificar se pode escrever o arquivo
+CreateNewFile=Criar novo arquivo
+FunctionToCreateFile=Função para criar arquivo
+RemoveFile=Remover arquivo
+FunctionToRemoveFile=Função para remover arquivo
+FileExists=Existe arquivo?
+FunctionToCheckIfExistFile=Função para verificar se existe o arquivo
+CopyFile=Copiar arquivo
+FunctionToCopyFile=Função para copiar o arquivo
+SourcePath=Caminho de origem
+DestinationPath=Caminho de destino
+SourceFile=Arquivo de origem
+DestinationFolder=Pasta de destino
+GetParentOfFile=Obter pai do arquivo
+FunctionToGetParentOfFile=Função para obter o pai do arquivo
+RenameFile=Renomear arquivo
+FunctionToRenameFile=Função para renomear arquivo
+NewNameOfFile=Novo nome do arquivo
+MoveFile=Mover arquivo
+FunctionToMoveFile=Função para mover arquivo
+PathOfSourceFile=Caminho de origem do arquivo
+PathOfDestinationFile=Caminho de destino do arquivo
+ForceFolderCreateToFile=Forçar criação da pasta para o arquivo
+FunctionToForceFolderCreateToFile=Função para forçar criação da pasta para o arquivo
+OpenFileToWrite=Abrir arquivo para escrita
+FunctionToOpenFileToWrite=Função para abrir arquivo para escrita
+AddContent=Adicionar conteúdo?
+OpenFileToRead=Abrir arquivo para leitura
+FunctionToOpenFileToRead=Função para abrir arquivo para leitura
+AddContentToFile=Adicionar conteúdo a arquivo
+FunctionToAddContentToFile=Função para adicionar conteúdo a arquivo
+StreamOfFile=Stream do arquivo
+ContentOfFile=Conteúdo do arquivo
+ReadContentOfFile=Ler conteúdo do arquivo
+FunctionToReadContentOfFile=Função para ler conteúdo do arquivo
+Size=Tamanho
+ReadAllContentOfFile=Ler todo conteúdo do arquivo
+FunctionToReadAllContentOfFile=Função para ler todo conteúdo do arquivo
+ReadLineOfFile=Ler linha do arquivo
+FunctionToReadLineOfFile=Função para ler linha do arquivo
+ClearFile=Limpar arquivo
+FunctionToClearFile=Função para limpar arquivo
+CloseFile=Fechar o arquivo
+FunctionToCloseFile=Função para fechar o arquivo
+ApplicationTemporaryFolder=Pasta temporária da aplicação
+FunctionToReturnApplicationTemporaryFolder=Função para retornar a pasta temporária da aplicação
+ReadAllContentFileInBytes=Ler todo conteúdo do arquivo em bytes
+FunctionToReadAllContentFileInBytes=Função para ler todo conteúdo do arquivo em bytes
+IsEndOfFile=É final do arquivo?
+FunctionToCheckIsEndOfFile=Função para verificar se é final do arquivo
+SizeOfFile=Tamanho do arquivo
+FunctionToGetSizeOfFile=Função para obter o tamanho do arquivo
+ContentOfFolder=Conteúdo da pasta
+FunctionToGetContentOfFolder=Função para obter o conteúdo da pasta
+IsFile=É arquivo?
+FunctionToCheckIsFile=Função verificar se é arquivo
+IsFolder=É pasta?
+FunctionToCheckIsFolder=Função verificar se é pasta
+TotalLinesFile=Total linhas arquivo
+FunctionToGetTotalLinesFile=Função para obter o total de linhas do arquivo
+DownloadFileFromUrl=Download de arquivo a partir de URL
+FunctionToDownloadFileFromUrl=Função para fazer download de arquivo a partir de URL
+URLAddress=Endereço url
+FolderPathToSaveFile=Caminho da pasta para salvar o arquivo
+NameOfFile=Nome do arquivo
+FileExtension=Extensão do arquivo
+ReadAllFileWithCharset=Ler todo arquivo definindo charset
+FunctionToReadAllFileWithCharset=Função para ler todo arquivo definindo charset
+Charset=Charset
