Improvemente Traduções de Utils

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -55,3 +55,21 @@ XpathCompileDescription=Function that return the children nodes with same name.
 XpathCompileName=Return the children nodes with same name.
 XpathCompileParam0=Element to search the children nodes
 XpathCompileParam1=Child node to search on element
+copyTextToTransferAreaName=Copy text to transfer area
+copyTextToTransferAreaDescription=Function that copy text to transfer area
+copyTextToTransferAreaParam0=Variable to be copy into transfer area
+shellExecuteName=Execute a command line
+shellExecuteDescription=Function that execute a command line and return error (if exists)
+shellExecuteParam0=Variable to be executed
+shellExecuteParam1=Variable that defines if errors will be returned
+randomName=Return a random number
+randomDescription=Function that return a random positive integer with maximum value defined by parameter
+randomParam0=Variable that define the maximum value for function
+compressToZipName=Compress a byte array
+compressToZipDescription=Function that compress a Var to Zip
+compressToZipParam0=Var to be compressed
+decodeZipFromByteName=Descompress a byte array
+decodeZipFromByteDescription=Function that descompress from zip to byte array
+decodeZipFromByteParam0=Variable to be descompress
+
+
