--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -55,3 +55,21 @@ XpathCompileDescription=Função que retorna os nós filhos com o mesmo nome.
 XpathCompileName=Retorna os nós filhos com o mesmo nome.
 XpathCompileParam0=Elemento a buscar os nós filhos
 XpathCompileParam1=Nó filho a ser buscado no elemento
+copyTextToTransferAreaName=Copia texto para área de transferência
+copyTextToTransferAreaDescription=Função que copia o texto para área de transferência
+copyTextToTransferAreaParam0=Varíavel a ser copiada na área de transferência
+shellExecuteName=Executa linha de comando
+shellExecuteDescription=Função que executa uma linha de comando e retona caso haja erro
+shellExecuteParam0=Varíavel a ser executada
+shellExecuteParam1=Variavel que define se deve coletar e retornar o erro
+randomName=Retorna um número aleatório
+randomDescription=Função que retorna um inteiro positivo aleatório com valor máximo indicado no parâmetro
+randomParam0=Varíavel que indica o valor máximo do random
+compressToZipName=Comprime array de bytes
+compressToZipDescription=Função que comprime um var para zip
+compressToZipParam0=Varíavel a ser comprimida
+decodeZipFromByteName=Descompacta array de bytes
+decodeZipFromByteDescription=Função que descompacta de zip para array de bytes
+decodeZipFromByteParam0=Varíavel a ser descompactada
+
+
