Adicionado no pom biblioteca para descompactar arquivos. Ajuste no translate

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1,104 +1,5 @@
-Base64ToText=Base64 for text
-Content=Content
-ContentInAscii=Content in ascii
-ContentInBase64=Base64 Content
-ContentInTextBinary=Binary text content
-ConvertToBytes=Conversion to bytes
-CreateFolder=Create folder
-FunctionToCreateNewFolder=Function to create new folder
-PathMustBeCreatedForFolder=Path to create folder
 MD5OfFile=MD5 file
-FunctionToReturnMD5OfFile=Function to return the MD5 file
-PathOfFile=Path of the file
-RemoveFolderFiles=Remove files folder
-FunctionToRemoveFolderFiles=Function to remove files folder
-PathOfFolder=Folder path
-Folder=Folder
-GetMD5OfFile=Get MD5 from file
-FunctionToGetMD5OfFile=Function to get MD5 from file
-File=File
-CanReadyFile=Can read file?
-FunctionToCheckIfCanReadFile=Function to check if you can read the file
-CanWriteFile=Can you write file?
-FunctionToCheckIfCanWriteFile=Function to check if you can write the file
-CreateNewFile=Create new file
-FunctionToCreateFile=Function to create file
-RemoveFile=Remove file
-FunctionToRemoveFile=Function to remove file
-FileExists=Is there a file?
-FunctionToCheckIfExistFile=Function to check if the file exists
-CopyFile=Copy file
-FunctionToCopyFile=Function to copy the file
-SourcePath=Source path
-DestinationPath=Destination Path
-SourceFile=Source file
-DestinationFolder=Destination Folder
-GetParentOfFile=Get parent from file
-FunctionToGetParentOfFile=Function to get the parent of the file
-RenameFile=Rename file
-FunctionToRenameFile=Function to rename file
-NewNameOfFile=New file name
-MoveFile=Move File
-FunctionToMoveFile=Function to move file
-PathOfSourceFile=File source path
-PathOfDestinationFile=File destination path
-ForceFolderCreateToFile=Force folder creation to file
-FunctionToForceFolderCreateToFile=Function to force folder creation to file
-OpenFileToWrite=Open file for writing
-FunctionToOpenFileToWrite=Function to open file for writing
-AddContent=Add content?
-OpenFileToRead=Open file for reading
-FunctionToOpenFileToRead=Function to open file for reading
-AddContentToFile=Add content to file
-FunctionToAddContentToFile=Function to add content to file
-StreamOfFile=Return of function "Open file for reading/writing"
-StreamOfFileToRead=Return of function "Open file for reading"
-StreamOfFileToWrite=Return of function "Open file for writing"
-ContentOfFile=File Contents
-ReadContentOfFile=Read file contents
-FunctionToReadContentOfFile=Function to read file contents
-Size=Size
-ReadAllContentOfFile=Read all file contents
-FunctionToReadAllContentOfFile=Function to read entire contents of the file
-ReadLineOfFile=Read file line
-FunctionToReadLineOfFile=Function to read file line
-ClearFile=Clear file
-FunctionToClearFile=Function to clean file
-CloseFile=Close file
-FunctionToCloseFile=Function to close the file
-ApplicationTemporaryFolder=Application temporary folder
-FunctionToReturnApplicationTemporaryFolder=Function to return the application temporary folder
-ReadAllContentFileInBytes=Read all file contents in bytes
-FunctionToReadAllContentFileInBytes=Function to read entire contents of the file in bytes
-IsEndOfFile=Is it end of file?
-FunctionToCheckIsEndOfFile=Function to check if the file is final
-SizeOfFile=File size
-FunctionToGetSizeOfFile=Function to get file size
-ContentOfFolder=Folder Contents
-FunctionToGetContentOfFolder=Function to get the contents of the folder
-IsFile=Is it file?
-FunctionToCheckIsFile=Check function if file
-IsFolder=Is it folder?
-FunctionToCheckIsFolder=Function check if it is folder
-TotalLinesFile=Total lines file
-FunctionToGetTotalLinesFile=Function to get the total rows from the file
-DownloadFileFromUrl=Download file from URL
-FunctionToDownloadFileFromUrl=Function to download file from URL
 URLAddress=url address
-FolderPathToSaveFile=Folder path to save the file
-NameOfFile=Filename
-FileExtension=File Extension
-ReadAllFileWithCharset=Read entire file by setting charset
-FunctionToReadAllFileWithCharset=Function to read entire file by defining charset
-Charset=Charset
-FunctionConvertBase64ToText=Function to convert base64 to text
-FunctionConvertToLogic=Function for converter to logical
-FunctionToConvertTextBinaryToText=Function for binary text to text converter
-FunctionToConvertTextInTextBinary=Function for text to binary text converter
-ParameterNotBinary=Parameter is not binary
-TextBinaryToText=Binary text for text
-TextToTextBinary=Text to binary text
-ToLogic=For logic
 XMLGetAttributeDescription=Function that return the attribute value from the element
 XMLGetAttributeName=Return the attribute value
 XMLGetAttributeParam0=Element to get que attribute value
@@ -142,19 +43,122 @@ XpathCompileDescription=Function that return the children nodes with same name.
 XpathCompileName=Return the children nodes with same name.
 XpathCompileParam0=Element to search the children nodes
 XpathCompileParam1=Child node to search on element
-copyTextToTransferAreaName=Copy text to transfer area
+addContent=Add content?
+addContentToFile=Add content to file
+applicationTemporaryFolder=Application temporary folder
+base64ToText=Base64 for text
+canReadyFile=Can read file?
+canWriteFile=Can you write file?
+charset=Charset
+clearFile=Clear file
+closeFile=Close file
+compressToZipDescription=Function that compress a Var to Zip
+compressToZipName=Compress a byte array
+compressToZipParam0=Var to be compressed
+content=Content
+contentInAscii=Content in ascii
+contentInBase64=Base64 Content
+contentInTextBinary=Binary text content
+contentOfFile=File Contents
+contentOfFolder=Folder Contents
+convertToBytes=Conversion to bytes
+copyFile=Copy file
 copyTextToTransferAreaDescription=Function that copy text to transfer area
+copyTextToTransferAreaName=Copy text to transfer area
 copyTextToTransferAreaParam0=Variable to be copy into transfer area
-shellExecuteName=Execute a command line
+couldNotReadContentsFile=Could not read entire contents of file
+createFolder=Create folder
+createNewFile=Create new file
+decodeZipFromByteDescription=Function that descompress from zip to byte array
+decodeZipFromByteName=Descompress a byte array
+decodeZipFromByteParam0=Variable to be descompress
+destinationFolder=Destination Folder
+destinationPath=Destination Path
+downloadFileFromUrl=Download file from URL
+file=File
+fileExists=Is there a file?
+fileExtension=File Extension
+folder=Folder
+folderPathToSaveFile=Folder path to save the file
+forceFolderCreateToFile=Force folder creation to file
+functionConvertBase64ToText=Function to convert base64 to text
+functionConvertToLogic=Function for converter to logical
+functionToAddContentToFile=Function to add content to file
+functionToCheckIfCanReadFile=Function to check if you can read the file
+functionToCheckIfCanWriteFile=Function to check if you can write the file
+functionToCheckIfExistFile=Function to check if the file exists
+functionToCheckIsEndOfFile=Function to check if the file is final
+functionToCheckIsFile=Check function if file
+functionToCheckIsFolder=Function check if it is folder
+functionToClearFile=Function to clean file
+functionToCloseFile=Function to close the file
+functionToConvertTextBinaryToText=Function for binary text to text converter
+functionToConvertTextInTextBinary=Function for text to binary text converter
+functionToCopyFile=Function to copy the file
+functionToCreateFile=Function to create file
+functionToCreateNewFolder=Function to create new folder
+functionToDownloadFileFromUrl=Function to download file from URL
+functionToForceFolderCreateToFile=Function to force folder creation to file
+functionToGetContentOfFolder=Function to get the contents of the folder
+functionToGetMD5OfFile=Function to get MD5 from file
+functionToGetParentOfFile=Function to get the parent of the file
+functionToGetSizeOfFile=Function to get file size
+functionToGetTotalLinesFile=Function to get the total rows from the file
+functionToMoveFile=Function to move file
+functionToOpenFileToRead=Function to open file for reading
+functionToOpenFileToWrite=Function to open file for writing
+functionToReadAllContentFileInBytes=Function to read entire contents of the file in bytes
+functionToReadAllContentOfFile=Function to read entire contents of the file
+functionToReadAllFileWithCharset=Function to read entire file by defining charset
+functionToReadContentOfFile=Function to read file contents
+functionToReadLineOfFile=Function to read file line
+functionToRemoveFile=Function to remove file
+functionToRemoveFolderFiles=Function to remove files folder
+functionToRenameFile=Function to rename file
+functionToReturnApplicationTemporaryFolder=Function to return the application temporary folder
+functionToReturnMD5OfFile=Function to return the MD5 file
+getMD5OfFile=Get MD5 from file
+getParentOfFile=Get parent from file
+isEndOfFile=Is it end of file?
+isFile=Is it file?
+isFolder=Is it folder?
+mameOfFile=Filename
+moveFile=Move File
+newNameOfFile=New file name
+openFileToRead=Open file for reading
+openFileToWrite=Open file for writing
+parameterNotBinary=Parameter is not binary
+pathMustBeCreatedForFolder=Path to create folder
+pathOfDestinationFile=File destination path
+pathOfFile=Path of the file
+pathOfFolder=Folder path
+pathOfSourceFile=File source path
+randomDescription=Function that return a random positive integer with maximum value defined by parameter
+randomName=Return a random number
+randomParam0=Variable that define the maximum value for function
+readAllContentFileInBytes=Read all file contents in bytes
+readAllContentOfFile=Read all file contents
+readAllFileWithCharset=Read entire file by setting charset
+readContentOfFile=Read file contents
+readLineOfFile=Read file line
+removeFile=Remove file
+removeFolderFiles=Remove files folder
+renameFile=Rename file
 shellExecuteDescription=Function that execute a command line and return error (if exists)
+shellExecuteName=Execute a command line
 shellExecuteParam0=Variable to be executed
 shellExecuteParam1=Variable that defines if errors will be returned
-randomName=Return a random number
-randomDescription=Function that return a random positive integer with maximum value defined by parameter
-randomParam0=Variable that define the maximum value for function
-compressToZipName=Compress a byte array
-compressToZipDescription=Function that compress a Var to Zip
-compressToZipParam0=Var to be compressed
-decodeZipFromByteName=Descompress a byte array
-decodeZipFromByteDescription=Function that descompress from zip to byte array
-decodeZipFromByteParam0=Variable to be descompress
+size=Size
+sizeOfFile=File size
+sourceFile=Source file
+sourcePath=Source path
+streamOfFile=Return of function "Open file for reading/writing"
+streamOfFileToRead=Return of function "Open file for reading"
+streamOfFileToWrite=Return of function "Open file for writing"
+textBinaryToText=Binary text for text
+textToTextBinary=Text to binary text
+toLogic=For logic 
+totalLinesFile=Total lines file
+unZipFile=Unzip file
+couldNotReadContentsFile=Could not read entire file contents
+functionToUnZipFile=Function to unzip file
