--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1,104 +1,104 @@
-ToLogic=Para lógico
-FunctionConvertToLogic=Função para converter para lógico
-Content=Conteúdo
-Base64ToText=Base64 para texto
-FunctionConvertBase64ToText=Função para converter base64 para texto
-ContentInBase64=Conteúdo em base64
-TextToTextBinary=Texto para texto binário
-FunctionToConvertTextInTextBinary=Função para converter texto para texto binário
-ContentInAscii=Conteúdo em ascii
-TextBinaryToText=Texto binário para texto
-FunctionToConvertTextBinaryToText=Função para converter texto binário para texto
-ContentInTextBinary=Conteúdo em texto binário
-ParameterNotBinary=Paramêtro não é binario
-ConvertToBytes=Conversão para bytes
-CreateFolder=Criar pasta
-FunctionToCreateNewFolder=Função para criar nova pasta
-PathMustBeCreatedForFolder=Caminho que deve ser criado a pasta
+addContent=Adicionar conteúdo?
+addContentToFile=Adicionar conteúdo a arquivo
+applicationTemporaryFolder=Pasta temporária da aplicação
+base64ToText=Base64 para texto
+canReadyFile=Pode ler arquivo?
+canWriteFile=Pode escrever arquivo?
+charset=Charset
+clearFile=Limpar arquivo
+closeFile=Fechar o arquivo
+content=Conteúdo
+contentInAscii=Conteúdo em ascii
+contentInBase64=Conteúdo em base64
+contentInTextBinary=Conteúdo em texto binário
+contentOfFile=Conteúdo do arquivo
+contentOfFolder=Conteúdo da pasta
+convertToBytes=Conversão para bytes
+copyFile=Copiar arquivo
+createFolder=Criar pasta
+createNewFile=Criar novo arquivo
+destinationFolder=Pasta de destino
+destinationPath=Caminho de destino
+downloadFileFromUrl=Download de arquivo a partir de URL
+file=Arquivo
+fileExists=Existe arquivo?
+fileExtension=Extensão do arquivo
+folder=Pasta
+folderPathToSaveFile=Caminho da pasta para salvar o arquivo
+forceFolderCreateToFile=Forçar criação da pasta para o arquivo
+functionConvertBase64ToText=Função para converter base64 para texto
+functionConvertToLogic=Função para converter para lógico
+functionToAddContentToFile=Função para adicionar conteúdo a arquivo
+functionToCheckIfCanReadFile=Função para verificar se pode ler o arquivo
+functionToCheckIfCanWriteFile=Função para verificar se pode escrever o arquivo
+functionToCheckIfExistFile=Função para verificar se existe o arquivo
+functionToCheckIsEndOfFile=Função para verificar se é final do arquivo
+functionToCheckIsFile=Função verificar se é arquivo
+functionToCheckIsFolder=Função verificar se é pasta
+functionToClearFile=Função para limpar arquivo
+functionToCloseFile=Função para fechar o arquivo
+functionToConvertTextBinaryToText=Função para converter texto binário para texto
+functionToConvertTextInTextBinary=Função para converter texto para texto binário
+functionToCopyFile=Função para copiar o arquivo
+functionToCreateFile=Função para criar arquivo
+functionToCreateNewFolder=Função para criar nova pasta
+functionToDownloadFileFromUrl=Função para fazer download de arquivo a partir de URL
+functionToForceFolderCreateToFile=Função para forçar criação da pasta para o arquivo
+functionToGetContentOfFolder=Função para obter o conteúdo da pasta
+functionToGetMD5OfFile=Função para obter MD5 do arquivo
+functionToGetParentOfFile=Função para obter o pai do arquivo
+functionToGetSizeOfFile=Função para obter o tamanho do arquivo
+functionToGetTotalLinesFile=Função para obter o total de linhas do arquivo
+functionToMoveFile=Função para mover arquivo
+functionToOpenFileToRead=Função para abrir arquivo para leitura
+functionToOpenFileToWrite=Função para abrir arquivo para escrita
+functionToReadAllContentFileInBytes=Função para ler todo conteúdo do arquivo em bytes
+functionToReadAllContentOfFile=Função para ler todo conteúdo do arquivo
+functionToReadAllFileWithCharset=Função para ler todo arquivo definindo charset
+functionToReadContentOfFile=Função para ler conteúdo do arquivo
+functionToReadLineOfFile=Função para ler linha do arquivo
+functionToRemoveFile=Função para remover arquivo
+functionToRemoveFolderFiles=Função para remover pasta de arquivos
+functionToRenameFile=Função para renomear arquivo
+functionToReturnApplicationTemporaryFolder=Função para retornar a pasta temporária da aplicação
+functionToReturnMD5OfFile=Função para retornar o MD5 do arquivo
+getMD5OfFile=Obter MD5 do arquivo
+getParentOfFile=Obter pai do arquivo
+isEndOfFile=É final do arquivo?
+isFile=É arquivo?
+isFolder=É pasta?
 MD5OfFile=MD5 do arquivo
-FunctionToReturnMD5OfFile=Função para retornar o MD5 do arquivo
-PathOfFile=Caminho do arquivo
-RemoveFolderFiles=Remover pasta de arquivos
-FunctionToRemoveFolderFiles=Função para remover pasta de arquivos
-PathOfFolder=Caminho da pasta
-Folder=Pasta
-GetMD5OfFile=Obter MD5 do arquivo
-FunctionToGetMD5OfFile=Função para obter MD5 do arquivo
-File=Arquivo
-CanReadyFile=Pode ler arquivo?
-FunctionToCheckIfCanReadFile=Função para verificar se pode ler o arquivo
-CanWriteFile=Pode escrever arquivo?
-FunctionToCheckIfCanWriteFile=Função para verificar se pode escrever o arquivo
-CreateNewFile=Criar novo arquivo
-FunctionToCreateFile=Função para criar arquivo
-RemoveFile=Remover arquivo
-FunctionToRemoveFile=Função para remover arquivo
-FileExists=Existe arquivo?
-FunctionToCheckIfExistFile=Função para verificar se existe o arquivo
-CopyFile=Copiar arquivo
-FunctionToCopyFile=Função para copiar o arquivo
-SourcePath=Caminho de origem
-DestinationPath=Caminho de destino
-SourceFile=Arquivo de origem
-DestinationFolder=Pasta de destino
-GetParentOfFile=Obter pai do arquivo
-FunctionToGetParentOfFile=Função para obter o pai do arquivo
-RenameFile=Renomear arquivo
-FunctionToRenameFile=Função para renomear arquivo
-NewNameOfFile=Novo nome do arquivo
-MoveFile=Mover arquivo
-FunctionToMoveFile=Função para mover arquivo
-PathOfSourceFile=Caminho de origem do arquivo
-PathOfDestinationFile=Caminho de destino do arquivo
-ForceFolderCreateToFile=Forçar criação da pasta para o arquivo
-FunctionToForceFolderCreateToFile=Função para forçar criação da pasta para o arquivo
-OpenFileToWrite=Abrir arquivo para escrita
-FunctionToOpenFileToWrite=Função para abrir arquivo para escrita
-AddContent=Adicionar conteúdo?
-OpenFileToRead=Abrir arquivo para leitura
-FunctionToOpenFileToRead=Função para abrir arquivo para leitura
-AddContentToFile=Adicionar conteúdo a arquivo
-FunctionToAddContentToFile=Função para adicionar conteúdo a arquivo
-StreamOfFile=Retorno da função "Abrir arquivo para leitura/escrita"
-StreamOfFileToRead=Retorno da função "Abrir arquivo para leitura"
-StreamOfFileToWrite=Retorno da função "Abrir arquivo para escrita"
-ContentOfFile=Conteúdo do arquivo
-ReadContentOfFile=Ler conteúdo do arquivo
-FunctionToReadContentOfFile=Função para ler conteúdo do arquivo
-Size=Tamanho
-ReadAllContentOfFile=Ler todo conteúdo do arquivo
-FunctionToReadAllContentOfFile=Função para ler todo conteúdo do arquivo
-ReadLineOfFile=Ler linha do arquivo
-FunctionToReadLineOfFile=Função para ler linha do arquivo
-ClearFile=Limpar arquivo
-FunctionToClearFile=Função para limpar arquivo
-CloseFile=Fechar o arquivo
-FunctionToCloseFile=Função para fechar o arquivo
-ApplicationTemporaryFolder=Pasta temporária da aplicação
-FunctionToReturnApplicationTemporaryFolder=Função para retornar a pasta temporária da aplicação
-ReadAllContentFileInBytes=Ler todo conteúdo do arquivo em bytes
-FunctionToReadAllContentFileInBytes=Função para ler todo conteúdo do arquivo em bytes
-IsEndOfFile=É final do arquivo?
-FunctionToCheckIsEndOfFile=Função para verificar se é final do arquivo
-SizeOfFile=Tamanho do arquivo
-FunctionToGetSizeOfFile=Função para obter o tamanho do arquivo
-ContentOfFolder=Conteúdo da pasta
-FunctionToGetContentOfFolder=Função para obter o conteúdo da pasta
-IsFile=É arquivo?
-FunctionToCheckIsFile=Função verificar se é arquivo
-IsFolder=É pasta?
-FunctionToCheckIsFolder=Função verificar se é pasta
-TotalLinesFile=Total linhas arquivo
-FunctionToGetTotalLinesFile=Função para obter o total de linhas do arquivo
-DownloadFileFromUrl=Download de arquivo a partir de URL
-FunctionToDownloadFileFromUrl=Função para fazer download de arquivo a partir de URL
+moveFile=Mover arquivo
+nameOfFile=Nome do arquivo
+newNameOfFile=Novo nome do arquivo
+openFileToRead=Abrir arquivo para leitura
+openFileToWrite=Abrir arquivo para escrita
+parameterNotBinary=Paramêtro não é binario
+pathMustBeCreatedForFolder=Caminho que deve ser criado a pasta
+pathOfDestinationFile=Caminho de destino do arquivo
+pathOfFile=Caminho do arquivo
+pathOfFolder=Caminho da pasta
+pathOfSourceFile=Caminho de origem do arquivo
+readAllContentFileInBytes=Ler todo conteúdo do arquivo em bytes
+readAllContentOfFile=Ler todo conteúdo do arquivo
+readAllFileWithCharset=Ler todo arquivo definindo charset
+readContentOfFile=Ler conteúdo do arquivo
+readLineOfFile=Ler linha do arquivo
+removeFile=Remover arquivo
+removeFolderFiles=Remover pasta de arquivos
+renameFile=Renomear arquivo
+size=Tamanho
+sizeOfFile=Tamanho do arquivo
+sourceFile=Arquivo de origem
+sourcePath=Caminho de origem
+streamOfFile=Retorno da função "Abrir arquivo para leitura/escrita"
+streamOfFileToRead=Retorno da função "Abrir arquivo para leitura"
+streamOfFileToWrite=Retorno da função "Abrir arquivo para escrita"
+textBinaryToText=Texto binário para texto
+textToTextBinary=Texto para texto binário 
+toLogic=Para lógico
+totalLinesFile=Total linhas arquivo
 URLAddress=Endereço url
-FolderPathToSaveFile=Caminho da pasta para salvar o arquivo
-NameOfFile=Nome do arquivo
-FileExtension=Extensão do arquivo
-ReadAllFileWithCharset=Ler todo arquivo definindo charset
-FunctionToReadAllFileWithCharset=Função para ler todo arquivo definindo charset
-Charset=Charset
 XMLGetAttributeDescription=Função que retorna o valor do atributo de um elemento
 XMLGetAttributeName=Retorna o valor de um atributo
 XMLGetAttributeParam0=Elemento a ser obtido o valor do atributo
@@ -142,19 +142,22 @@ XpathCompileDescription=Função que retorna os nós filhos com o mesmo nome.
 XpathCompileName=Retorna os nós filhos com o mesmo nome.
 XpathCompileParam0=Elemento a buscar os nós filhos
 XpathCompileParam1=Nó filho a ser buscado no elemento
-copyTextToTransferAreaName=Copia texto para área de transferência
+compressToZipDescription=Função que comprime um var para zip
+compressToZipName=Comprime array de bytes
+compressToZipParam0=Varíavel a ser comprimida
 copyTextToTransferAreaDescription=Função que copia o texto para área de transferência
+copyTextToTransferAreaName=Copia texto para área de transferência
 copyTextToTransferAreaParam0=Varíavel a ser copiada na área de transferência
-shellExecuteName=Executa linha de comando
+decodeZipFromByteDescription=Função que descompacta de zip para array de bytes
+decodeZipFromByteName=Descompacta array de bytes
+decodeZipFromByteParam0=Varíavel a ser descompactada
+randomDescription=Função que retorna um inteiro positivo aleatório com valor máximo indicado no parâmetro
+randomName=Retorna um número aleatório
+randomParam0=Varíavel que indica o valor máximo do random
 shellExecuteDescription=Função que executa uma linha de comando e retona caso haja erro
+shellExecuteName=Executa linha de comando
 shellExecuteParam0=Varíavel a ser executada
 shellExecuteParam1=Variavel que define se deve coletar e retornar o erro
-randomName=Retorna um número aleatório
-randomDescription=Função que retorna um inteiro positivo aleatório com valor máximo indicado no parâmetro
-randomParam0=Varíavel que indica o valor máximo do random
-compressToZipName=Comprime array de bytes
-compressToZipDescription=Função que comprime um var para zip
-compressToZipParam0=Varíavel a ser comprimida
-decodeZipFromByteName=Descompacta array de bytes
-decodeZipFromByteDescription=Função que descompacta de zip para array de bytes
-decodeZipFromByteParam0=Varíavel a ser descompactada
+unZipFile=Descompactar arquivo zip
+couldNotReadContentsFile=Não foi possível ler todo o conteúdo do arquivo
+functionToUnZipFile=Função para descompactar arquivo zip
