--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -66,7 +66,7 @@ copyFile=Copy file
 copyTextToTransferAreaDescription=Function that copy text to transfer area
 copyTextToTransferAreaName=Copy text to transfer area
 copyTextToTransferAreaParam0=Variable to be copy into transfer area
-couldNotReadContentsFile=Could not read entire file contents
+couldNotReadContentsFile=Could not read entire contents of file
 createFolder=Create folder
 createNewFile=Create new file
 decodeZipFromByteDescription=Function that descompress from zip to byte array
@@ -117,7 +117,6 @@ functionToRemoveFolderFiles=Function to remove files folder
 functionToRenameFile=Function to rename file
 functionToReturnApplicationTemporaryFolder=Function to return the application temporary folder
 functionToReturnMD5OfFile=Function to return the MD5 file
-functionToUnZipFile=Function to unzip file
 getMD5OfFile=Get MD5 from file
 getParentOfFile=Get parent from file
 isEndOfFile=Is it end of file?
@@ -161,3 +160,11 @@ textToTextBinary=Text to binary text
 toLogic=For logic 
 totalLinesFile=Total lines file
 unZipFile=Unzip file
+couldNotReadContentsFile=Could not read entire file contents
+functionToUnZipFile=Function to unzip file
+convertToAscii=Convert char to ASCII code
+functionToConvertToAscii=Function to convert char to ASCII code
+convertHexadecimalToInt=Convert hexadecimal to integer
+functionToConvertHexadecimalToInt=Function to convert hexadecimal to integer
+convertArrayToList=Convert array to list
+functionToConvertArrayToList=Function to convert array to list 
