removido repetido no en_us internacionalizacao

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -122,7 +122,7 @@ getParentOfFile=Get parent from file
 isEndOfFile=Is it end of file?
 isFile=Is it file?
 isFolder=Is it folder?
-mameOfFile=Filename
+nameOfFile=Filename
 moveFile=Move File
 newNameOfFile=New file name
 openFileToRead=Open file for reading
@@ -160,7 +160,6 @@ textToTextBinary=Text to binary text
 toLogic=For logic 
 totalLinesFile=Total lines file
 unZipFile=Unzip file
-couldNotReadContentsFile=Could not read entire file contents
 functionToUnZipFile=Function to unzip file
 convertToAscii=Convert char to ASCII code
 functionToConvertToAscii=Function to convert char to ASCII code
