Adicionado tipos de objetos e categorias no anotation CronapiMetaData, ajustados as classes de Operations

--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -61,6 +61,11 @@ contentInBase64=Base64 Content
 contentInTextBinary=Binary text content
 contentOfFile=File Contents
 contentOfFolder=Folder Contents
+convertArrayToList=Convert array to list
+convertBase64ToBinary=Convert base64 to binary
+convertHexadecimalToInt=Convert hexadecimal to integer
+convertStringToJs=Convert text to escaping text in javascript
+convertToAscii=Convert char to ASCII code
 convertToBytes=Conversion to bytes
 copyFile=Copy file
 copyTextToTransferAreaDescription=Function that copy text to transfer area
@@ -92,8 +97,13 @@ functionToCheckIsFile=Check function if file
 functionToCheckIsFolder=Function check if it is folder
 functionToClearFile=Function to clean file
 functionToCloseFile=Function to close the file
+functionToConvertArrayToList=Function to convert array to list 
+functionToConvertBase64ToBinary=Function to convert base64 to binary
+functionToConvertHexadecimalToInt=Function to convert hexadecimal to integer
+functionToConvertStringToJs=Function to convert text to escaped text in javascript
 functionToConvertTextBinaryToText=Function for binary text to text converter
 functionToConvertTextInTextBinary=Function for text to binary text converter
+functionToConvertToAscii=Function to convert char to ASCII code
 functionToCopyFile=Function to copy the file
 functionToCreateFile=Function to create file
 functionToCreateNewFolder=Function to create new folder
@@ -117,13 +127,14 @@ functionToRemoveFolderFiles=Function to remove files folder
 functionToRenameFile=Function to rename file
 functionToReturnApplicationTemporaryFolder=Function to return the application temporary folder
 functionToReturnMD5OfFile=Function to return the MD5 file
+functionToUnZipFile=Function to unzip file
 getMD5OfFile=Get MD5 from file
 getParentOfFile=Get parent from file
 isEndOfFile=Is it end of file?
 isFile=Is it file?
 isFolder=Is it folder?
-nameOfFile=Filename
 moveFile=Move File
+nameOfFile=Filename
 newNameOfFile=New file name
 openFileToRead=Open file for reading
 openFileToWrite=Open file for writing
@@ -160,10 +171,3 @@ textToTextBinary=Text to binary text
 toLogic=For logic 
 totalLinesFile=Total lines file
 unZipFile=Unzip file
-functionToUnZipFile=Function to unzip file
-convertToAscii=Convert char to ASCII code
-functionToConvertToAscii=Function to convert char to ASCII code
-convertHexadecimalToInt=Convert hexadecimal to integer
-functionToConvertHexadecimalToInt=Function to convert hexadecimal to integer
-convertArrayToList=Convert array to list
-functionToConvertArrayToList=Function to convert array to list 
