--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -1,103 +1,4 @@
-addContent=Adicionar conteúdo?
-addContentToFile=Adicionar conteúdo a arquivo
-applicationTemporaryFolder=Pasta temporária da aplicação
-base64ToText=Base64 para texto
-canReadyFile=Pode ler arquivo?
-canWriteFile=Pode escrever arquivo?
-charset=Charset
-clearFile=Limpar arquivo
-closeFile=Fechar o arquivo
-content=Conteúdo
-contentInAscii=Conteúdo em ascii
-contentInBase64=Conteúdo em base64
-contentInTextBinary=Conteúdo em texto binário
-contentOfFile=Conteúdo do arquivo
-contentOfFolder=Conteúdo da pasta
-convertToBytes=Conversão para bytes
-copyFile=Copiar arquivo
-createFolder=Criar pasta
-createNewFile=Criar novo arquivo
-destinationFolder=Pasta de destino
-destinationPath=Caminho de destino
-downloadFileFromUrl=Download de arquivo a partir de URL
-file=Arquivo
-fileExists=Existe arquivo?
-fileExtension=Extensão do arquivo
-folder=Pasta
-folderPathToSaveFile=Caminho da pasta para salvar o arquivo
-forceFolderCreateToFile=Forçar criação da pasta para o arquivo
-functionConvertBase64ToText=Função para converter base64 para texto
-functionConvertToLogic=Função para converter para lógico
-functionToAddContentToFile=Função para adicionar conteúdo a arquivo
-functionToCheckIfCanReadFile=Função para verificar se pode ler o arquivo
-functionToCheckIfCanWriteFile=Função para verificar se pode escrever o arquivo
-functionToCheckIfExistFile=Função para verificar se existe o arquivo
-functionToCheckIsEndOfFile=Função para verificar se é final do arquivo
-functionToCheckIsFile=Função verificar se é arquivo
-functionToCheckIsFolder=Função verificar se é pasta
-functionToClearFile=Função para limpar arquivo
-functionToCloseFile=Função para fechar o arquivo
-functionToConvertTextBinaryToText=Função para converter texto binário para texto
-functionToConvertTextInTextBinary=Função para converter texto para texto binário
-functionToCopyFile=Função para copiar o arquivo
-functionToCreateFile=Função para criar arquivo
-functionToCreateNewFolder=Função para criar nova pasta
-functionToDownloadFileFromUrl=Função para fazer download de arquivo a partir de URL
-functionToForceFolderCreateToFile=Função para forçar criação da pasta para o arquivo
-functionToGetContentOfFolder=Função para obter o conteúdo da pasta
-functionToGetMD5OfFile=Função para obter MD5 do arquivo
-functionToGetParentOfFile=Função para obter o pai do arquivo
-functionToGetSizeOfFile=Função para obter o tamanho do arquivo
-functionToGetTotalLinesFile=Função para obter o total de linhas do arquivo
-functionToMoveFile=Função para mover arquivo
-functionToOpenFileToRead=Função para abrir arquivo para leitura
-functionToOpenFileToWrite=Função para abrir arquivo para escrita
-functionToReadAllContentFileInBytes=Função para ler todo conteúdo do arquivo em bytes
-functionToReadAllContentOfFile=Função para ler todo conteúdo do arquivo
-functionToReadAllFileWithCharset=Função para ler todo arquivo definindo charset
-functionToReadContentOfFile=Função para ler conteúdo do arquivo
-functionToReadLineOfFile=Função para ler linha do arquivo
-functionToRemoveFile=Função para remover arquivo
-functionToRemoveFolderFiles=Função para remover pasta de arquivos
-functionToRenameFile=Função para renomear arquivo
-functionToReturnApplicationTemporaryFolder=Função para retornar a pasta temporária da aplicação
-functionToReturnMD5OfFile=Função para retornar o MD5 do arquivo
-getMD5OfFile=Obter MD5 do arquivo
-getParentOfFile=Obter pai do arquivo
-isEndOfFile=É final do arquivo?
-isFile=É arquivo?
-isFolder=É pasta?
 MD5OfFile=MD5 do arquivo
-moveFile=Mover arquivo
-nameOfFile=Nome do arquivo
-newNameOfFile=Novo nome do arquivo
-openFileToRead=Abrir arquivo para leitura
-openFileToWrite=Abrir arquivo para escrita
-parameterNotBinary=Paramêtro não é binario
-pathMustBeCreatedForFolder=Caminho que deve ser criado a pasta
-pathOfDestinationFile=Caminho de destino do arquivo
-pathOfFile=Caminho do arquivo
-pathOfFolder=Caminho da pasta
-pathOfSourceFile=Caminho de origem do arquivo
-readAllContentFileInBytes=Ler todo conteúdo do arquivo em bytes
-readAllContentOfFile=Ler todo conteúdo do arquivo
-readAllFileWithCharset=Ler todo arquivo definindo charset
-readContentOfFile=Ler conteúdo do arquivo
-readLineOfFile=Ler linha do arquivo
-removeFile=Remover arquivo
-removeFolderFiles=Remover pasta de arquivos
-renameFile=Renomear arquivo
-size=Tamanho
-sizeOfFile=Tamanho do arquivo
-sourceFile=Arquivo de origem
-sourcePath=Caminho de origem
-streamOfFile=Retorno da função "Abrir arquivo para leitura/escrita"
-streamOfFileToRead=Retorno da função "Abrir arquivo para leitura"
-streamOfFileToWrite=Retorno da função "Abrir arquivo para escrita"
-textBinaryToText=Texto binário para texto
-textToTextBinary=Texto para texto binário 
-toLogic=Para lógico
-totalLinesFile=Total linhas arquivo
 URLAddress=Endereço url
 XMLGetAttributeDescription=Função que retorna o valor do atributo de um elemento
 XMLGetAttributeName=Retorna o valor de um atributo
@@ -142,28 +43,131 @@ XpathCompileDescription=Função que retorna os nós filhos com o mesmo nome.
 XpathCompileName=Retorna os nós filhos com o mesmo nome.
 XpathCompileParam0=Elemento a buscar os nós filhos
 XpathCompileParam1=Nó filho a ser buscado no elemento
+addContent=Adicionar conteúdo?
+addContentToFile=Adicionar conteúdo a arquivo
+applicationTemporaryFolder=Pasta temporária da aplicação
+base64ToText=Base64 para texto
+canReadyFile=Pode ler arquivo?
+canWriteFile=Pode escrever arquivo?
+charset=Charset
+clearFile=Limpar arquivo
+closeFile=Fechar o arquivo
 compressToZipDescription=Função que comprime um var para zip
 compressToZipName=Comprime array de bytes
 compressToZipParam0=Varíavel a ser comprimida
+content=Conteúdo
+contentInAscii=Conteúdo em ascii
+contentInBase64=Conteúdo em base64
+contentInTextBinary=Conteúdo em texto binário
+contentOfFile=Conteúdo do arquivo
+contentOfFolder=Conteúdo da pasta
+convertArrayToList=Converter array para lista
+convertBase64ToBinary=Converter base64 para binario
+convertHexadecimalToInt=Converter hexadecimal para inteiro
+convertStringToJs=Converter texto para texto escapado em javascript
+convertToAscii=Converter char para código ASCII
+convertToBytes=Conversão para bytes
+copyFile=Copiar arquivo
 copyTextToTransferAreaDescription=Função que copia o texto para área de transferência
 copyTextToTransferAreaName=Copia texto para área de transferência
 copyTextToTransferAreaParam0=Varíavel a ser copiada na área de transferência
+couldNotReadContentsFile=Não foi possível ler todo o conteúdo do arquivo
+createFolder=Criar pasta
+createNewFile=Criar novo arquivo
 decodeZipFromByteDescription=Função que descompacta de zip para array de bytes
 decodeZipFromByteName=Descompacta array de bytes
 decodeZipFromByteParam0=Varíavel a ser descompactada
+destinationFolder=Pasta de destino
+destinationPath=Caminho de destino
+downloadFileFromUrl=Download de arquivo a partir de URL
+file=Arquivo
+fileExists=Existe arquivo?
+fileExtension=Extensão do arquivo
+folder=Pasta
+folderPathToSaveFile=Caminho da pasta para salvar o arquivo
+forceFolderCreateToFile=Forçar criação da pasta para o arquivo
+functionConvertBase64ToText=Função para converter base64 para texto
+functionConvertToLogic=Função para converter para lógico
+functionToAddContentToFile=Função para adicionar conteúdo a arquivo
+functionToCheckIfCanReadFile=Função para verificar se pode ler o arquivo
+functionToCheckIfCanWriteFile=Função para verificar se pode escrever o arquivo
+functionToCheckIfExistFile=Função para verificar se existe o arquivo
+functionToCheckIsEndOfFile=Função para verificar se é final do arquivo
+functionToCheckIsFile=Função verificar se é arquivo
+functionToCheckIsFolder=Função verificar se é pasta
+functionToClearFile=Função para limpar arquivo
+functionToCloseFile=Função para fechar o arquivo
+functionToConvertArrayToList=Função para converter array para lista
+functionToConvertBase64ToBinary=Função para converter base64 para binario
+functionToConvertHexadecimalToInt=Função para converter hexadecimal para inteiro
+functionToConvertStringToJs=Função para converter texto para texto escapado em javascript
+functionToConvertTextBinaryToText=Função para converter texto binário para texto
+functionToConvertTextInTextBinary=Função para converter texto para texto binário
+functionToConvertToAscii=Função para converter char para código ASCII
+functionToCopyFile=Função para copiar o arquivo
+functionToCreateFile=Função para criar arquivo
+functionToCreateNewFolder=Função para criar nova pasta
+functionToDownloadFileFromUrl=Função para fazer download de arquivo a partir de URL
+functionToForceFolderCreateToFile=Função para forçar criação da pasta para o arquivo
+functionToGetContentOfFolder=Função para obter o conteúdo da pasta
+functionToGetMD5OfFile=Função para obter MD5 do arquivo
+functionToGetParentOfFile=Função para obter o pai do arquivo
+functionToGetSizeOfFile=Função para obter o tamanho do arquivo
+functionToGetTotalLinesFile=Função para obter o total de linhas do arquivo
+functionToMoveFile=Função para mover arquivo
+functionToOpenFileToRead=Função para abrir arquivo para leitura
+functionToOpenFileToWrite=Função para abrir arquivo para escrita
+functionToReadAllContentFileInBytes=Função para ler todo conteúdo do arquivo em bytes
+functionToReadAllContentOfFile=Função para ler todo conteúdo do arquivo
+functionToReadAllFileWithCharset=Função para ler todo arquivo definindo charset
+functionToReadContentOfFile=Função para ler conteúdo do arquivo
+functionToReadLineOfFile=Função para ler linha do arquivo
+functionToRemoveFile=Função para remover arquivo
+functionToRemoveFolderFiles=Função para remover pasta de arquivos
+functionToRenameFile=Função para renomear arquivo
+functionToReturnApplicationTemporaryFolder=Função para retornar a pasta temporária da aplicação
+functionToReturnMD5OfFile=Função para retornar o MD5 do arquivo
+functionToUnZipFile=Função para descompactar arquivo zip
+getMD5OfFile=Obter MD5 do arquivo
+getParentOfFile=Obter pai do arquivo
+isEndOfFile=É final do arquivo?
+isFile=É arquivo?
+isFolder=É pasta?
+moveFile=Mover arquivo
+nameOfFile=Nome do arquivo
+newNameOfFile=Novo nome do arquivo
+openFileToRead=Abrir arquivo para leitura
+openFileToWrite=Abrir arquivo para escrita
+parameterNotBinary=Paramêtro não é binario
+pathMustBeCreatedForFolder=Caminho que deve ser criado a pasta
+pathOfDestinationFile=Caminho de destino do arquivo
+pathOfFile=Caminho do arquivo
+pathOfFolder=Caminho da pasta
+pathOfSourceFile=Caminho de origem do arquivo
 randomDescription=Função que retorna um inteiro positivo aleatório com valor máximo indicado no parâmetro
 randomName=Retorna um número aleatório
 randomParam0=Varíavel que indica o valor máximo do random
+readAllContentFileInBytes=Ler todo conteúdo do arquivo em bytes
+readAllContentOfFile=Ler todo conteúdo do arquivo
+readAllFileWithCharset=Ler todo arquivo definindo charset
+readContentOfFile=Ler conteúdo do arquivo
+readLineOfFile=Ler linha do arquivo
+removeFile=Remover arquivo
+removeFolderFiles=Remover pasta de arquivos
+renameFile=Renomear arquivo
 shellExecuteDescription=Função que executa uma linha de comando e retona caso haja erro
 shellExecuteName=Executa linha de comando
 shellExecuteParam0=Varíavel a ser executada
 shellExecuteParam1=Variavel que define se deve coletar e retornar o erro
+size=Tamanho
+sizeOfFile=Tamanho do arquivo
+sourceFile=Arquivo de origem
+sourcePath=Caminho de origem
+streamOfFile=Retorno da função "Abrir arquivo para leitura/escrita"
+streamOfFileToRead=Retorno da função "Abrir arquivo para leitura"
+streamOfFileToWrite=Retorno da função "Abrir arquivo para escrita"
+textBinaryToText=Texto binário para texto
+textToTextBinary=Texto para texto binário 
+toLogic=Para lógico
+totalLinesFile=Total linhas arquivo
 unZipFile=Descompactar arquivo zip
-couldNotReadContentsFile=Não foi possível ler todo o conteúdo do arquivo
-functionToUnZipFile=Função para descompactar arquivo zip
-convertToAscii=Converter char para código ASCII
-functionToConvertToAscii=Função para converter char para código ASCII
-convertHexadecimalToInt=Converter hexadecimal para inteiro
-functionToConvertHexadecimalToInt=Função para converter hexadecimal para inteiro
-convertArrayToList=Converter array para lista
-functionToConvertArrayToList=Função para converter array para lista 
