--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -11,5 +11,7 @@
 	"functionToConvertToAscii": "Função para converter char para código ASCII",
 	"content": "Conteúdo",
 	"convertStringToJs": "Converter texto para texto escapado javascript",
-	"functionToConvertStringToJs": "Função para converter texto para texto escapado javascript"
+	"functionToConvertStringToJs": "Função para converter texto para texto escapado javascript",
+	"convertStringToDate": "Converter texto para data",
+	"functionToConvertStringToDate": "Função para converter texto para data"
 }
