--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -13,5 +13,8 @@
 	"convertStringToJs": "Converter texto para texto escapado javascript",
 	"functionToConvertStringToJs": "Função para converter texto para texto escapado javascript",
 	"convertStringToDate": "Converter texto para data",
-	"functionToConvertStringToDate": "Função para converter texto para data"
+	"functionToConvertStringToDate": "Função para converter texto para data",
+	"minSize":"Tamanho mínimo",
+  "convertIntToHex":"Converter inteiro para hexadecimal",
+  "functionToConvertIntToHex":"Função para converter inteiro para hexadecimal"
 }
