--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -13,5 +13,8 @@
 	"convertStringToJs": "Convert javascript text to escaped text",
 	"functionToConvertStringToJs": "Function to convert text to javascript escaping text",
 	"convertStringToDate": "Convert text to data",
-  "functionToConvertStringToDate": "Function to convert text to data"
+  "functionToConvertStringToDate": "Function to convert text to data",
+  "minSize":"Minimum size",
+  "convertIntToHex":"Convert to hexadecimal",
+  "functionToConvertIntToHex":"Function to convert integer to hexadecimal"
 }
