--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -171,3 +171,9 @@ textToTextBinary=Text to binary text
 toLogic=For logic 
 totalLinesFile=Total lines file
 unZipFile=Unzip file
+convertStringToDate=Convert text to data
+functionToConvertStringToDate=Function to convert text to data
+mask=Mask
+minSize=Minimum size
+convertIntToHex=Convert to hexadecimal
+functionToConvertIntToHex=Function to convert integer to hexadecimal
