--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -171,3 +171,9 @@ textToTextBinary=Texto para texto binário
 toLogic=Para lógico
 totalLinesFile=Total linhas arquivo
 unZipFile=Descompactar arquivo zip
+convertStringToDate=Converter texto para data
+functionToConvertStringToDate=Função para converter texto para data
+mask=Máscara
+minSize=Tamanho mínimo
+convertIntToHex=Converter inteiro para hexadecimal
+functionToConvertIntToHex=Função para converter inteiro para hexadecimal
