--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -177,3 +177,5 @@ mask=Máscara
 minSize=Tamanho mínimo
 convertIntToHex=Converter inteiro para hexadecimal
 functionToConvertIntToHex=Função para converter inteiro para hexadecimal
+convertToLong=Converter para long
+functionToConvertToLong=Função para converter para long
