--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -18,5 +18,20 @@
 	"convertIntToHex": "Convert to hexadecimal",
 	"functionToConvertIntToHex": "Function to convert integer to hexadecimal",
 	"convertToLong": "Convert to long",
-	"functionToConvertToLong": "Function to convert to long"
+	"functionToConvertToLong": "Function to convert to long",
+	"convertToString": "Convert to text",
+	"functionToConvertToString": "Function to convert to text",
+	"getMinuteFromDate": "Get date minute",
+	"functionToGetMinuteFromDate": "Function to get minute of date",
+	"date": "Date",
+	"getSecondFromDate": "Get date second",
+	"functionToGetSecondFromDate": "Function to get date second",
+	"getHourFromDate": "Get date time",
+	"functionToGetHourFromDate": "Function to get date time",
+	"getYearFromDate": "Get year of date",
+	"functionToGetYearFromDate": "Function to get year of date",
+	"getMonthFromDate": "Get month of date",
+	"functionToGetMonthFromDate": "Function to get date month",
+	"getDayFromDate": "Get date day",
+	"functionToGetDayFromDate": "Function to get date day"
 }
