Adicionando funções para data

--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -179,3 +179,18 @@ convertIntToHex=Convert to hexadecimal
 functionToConvertIntToHex=Function to convert integer to hexadecimal
 convertToLong=Convert to long
 functionToConvertToLong=Function to convert to long
+convertToString=Convert to text
+functionToConvertToString=Function to convert to text
+getMinuteFromDate=Get date minute
+functionToGetMinuteFromDate=Function to get minute of date
+date=Date
+getSecondFromDate=Get date second
+functionToGetSecondFromDate=Function to get date second
+getHourFromDate=Get date time
+functionToGetHourFromDate=Function to get date time
+getYearFromDate=Get date year
+functionToGetYearFromDate=Function to get date year
+getMonthFromDate=Get date month
+functionToGetMonthFromDate=Function to get date month
+getDayFromDate=Get date day
+functionToGetDayFromDate=Function to get date day
