--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -194,3 +194,18 @@ getMonthFromDate=Get date month
 functionToGetMonthFromDate=Function to get date month
 getDayFromDate=Get date day
 functionToGetDayFromDate=Function to get date day
+getMonthsBetweenDates=Get total of months between dates
+functionToGetMonthsBetweenDates=Function to get total of months between dates
+largerDateToBeSubtracted=Larger date to be subtracted
+smallerDateToBeSubtracted=Minor date to be subtracted
+getYearsBetweenDates=Get total of years between dates
+functionToGetYearsBetweenDates=Function to get total of years between dates
+incDay=Increase day on date
+functionToIncDay=Function to increment day on date
+daysToIncrement=Days to increase
+incMonth=Increase month on date
+functionToIncMonth=Function to increment month on date
+monthsToIncrement=Months to increase
+incYear=Increase year on date
+functionToIncYear=Function to increase data
+yearsToIncrement=Years an increment
