--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -194,3 +194,18 @@ getMonthFromDate=Obter mês da data
 functionToGetMonthFromDate=Função para obter mês da data
 getDayFromDate=Obter dia da data
 functionToGetDayFromDate=Função para obter dia da data
+getMonthsBetweenDates=Obter total de meses entre datas
+functionToGetMonthsBetweenDates=Função para obter total de meses entre datas
+largerDateToBeSubtracted=Maior data a ser subtraida
+smallerDateToBeSubtracted=Menor data a ser subtraida
+getYearsBetweenDates=Obter total de anos entre datas
+functionToGetYearsBetweenDates=Função para obter total de anos entre datas
+incDay=Incrementar dia na data
+functionToIncDay=Função para incrementar dia na data
+daysToIncrement=Dias a incrementar
+incMonth=Incrementar mês na data
+functionToIncMonth=Função para incrementar mês na data
+monthsToIncrement=Meses a incrementar
+incYear=Incrementar ano na data
+functionToIncYear=Função para incrementar ano na data
+yearsToIncrement=Anos a incrementar
