--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -209,3 +209,9 @@ monthsToIncrement=Months to increase
 incYear=Increase year on date
 functionToIncYear=Function to increase data
 yearsToIncrement=Years an increment
+getNow=Get current date and time
+functionToGetNow=Function to get current date and time
+getDaysBetweenDates=Get days total between dates
+functionToGetDaysBetweenDates=Function to get total days between dates
+formatDateTime=Format date
+functionToFormatDateTime=Function to format date
