--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -209,3 +209,9 @@ monthsToIncrement=Meses a incrementar
 incYear=Incrementar ano na data
 functionToIncYear=Função para incrementar ano na data
 yearsToIncrement=Anos a incrementar
+getNow=Obter data e hora atual
+functionToGetNow=Função para obter data e hora atual
+getDaysBetweenDates=Obter total de dias entre datas
+functionToGetDaysBetweenDates=Função para obter total de dias entre datas
+formatDateTime=Formatar data
+functionToFormatDateTime=Função para formatar data
