--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -48,5 +48,9 @@
 	"monthsToIncrement": "Meses a incrementar",
 	"incYear": "Incrementar ano na data",
 	"functionToIncYear": "Função para incrementar ano na data",
-	"yearsToIncrement": "Anos a incrementar"
+	"yearsToIncrement": "Anos a incrementar",
+	"getNow": "Obter data e hora atual",
+	"functionToGetNow": "Função para obter data e hora atual",
+	"getDaysBetweenDates": "Obter total de dias entre datas",
+	"functionToGetDaysBetweenDates": "Função para obter total de dias entre datas"
 }
