--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -215,3 +215,15 @@ getDaysBetweenDates=Get days total between dates
 functionToGetDaysBetweenDates=Function to get total days between dates
 formatDateTime=Format date
 functionToFormatDateTime=Function to format date
+getDayOfWeek=Get day of week from date
+functionToGetDayOfWeek=Function to get day of week from date
+getLastDayFromMonth=Get last day from month
+functionToGetLastDayFromMonth=Function to get last day from month
+month=Month
+year=Year
+newDate=New date
+functionToNewDate=Function to create new date
+day=Day
+hour=Hour
+minute=Minute
+second=Second
