--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -215,3 +215,15 @@ getDaysBetweenDates=Obter total de dias entre datas
 functionToGetDaysBetweenDates=Função para obter total de dias entre datas
 formatDateTime=Formatar data
 functionToFormatDateTime=Função para formatar data
+getDayOfWeek=Obter dia da semana da data
+functionToGetDayOfWeek=Função para obter dia da semana da data
+getLastDayFromMonth=Obter o último dia do mês
+functionToGetLastDayFromMonth=Função para obter o último dia do mês
+month=Mês
+year=Ano
+newDate=Nova data
+functionToNewDate=Função para criar nova data
+day=Dia
+hour=Hora
+minute=Minuto
+second=Segundo
