Adicionado funções e ajuste no Var

--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -227,3 +227,8 @@ day=Day
 hour=Hour
 minute=Minute
 second=Second
+createRecipientsAddress=Create Recipients
+functionToCreateRecipientsAddress=Function to create recipients, if you need to pass more than 1 email, it is necessary to separate by comma (,)
+forRecipient=For recipient (to)
+copyToRecipient=Copy to recipient (cc)
+hiddenCopyToRecipient=Copy hidden to recipient (bcc)
