--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -227,3 +227,8 @@ day=Dia
 hour=Hora
 minute=Minuto
 second=Segundo
+createRecipientsAddress=Criar destinatários
+functionToCreateRecipientsAddress=Função para criar destinatários, caso necessite passar mais de 1 email, é necessário separar por virgula (,)
+forRecipient=Para destinário (to)
+copyToRecipient=Cópia para destinário (cc)
+hiddenCopyToRecipient=Cópia oculta para destinário (bcc)
