--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -232,3 +232,16 @@ functionToCreateRecipientsAddress=Function to create recipients, if you need to 
 forRecipient=For recipient (to)
 copyToRecipient=Copy to recipient (cc)
 hiddenCopyToRecipient=Copy hidden to recipient (bcc)
+sendEmailSmtp=Send mail using SMTP
+functionToSendEmailSmtp=Function to send mail using SMTP
+hostAddress=Server address
+hostPort=Server port
+protocolToSendEmail=Protocol for sending e-mail (TLS, SSL or none)
+login=Login
+password=Password
+senderMail=Sender email
+toRecipientMail=Recipient's email (return function to create destinations or comma-separated)
+subject=Subject
+content=Content
+isHtml=Is it html?
+attachments=Attachments
