--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -232,3 +232,16 @@ functionToCreateRecipientsAddress=Função para criar destinatários, caso neces
 forRecipient=Para destinário (to)
 copyToRecipient=Cópia para destinário (cc)
 hiddenCopyToRecipient=Cópia oculta para destinário (bcc)
+sendEmailSmtp=Enviar email usando SMTP
+functionToSendEmailSmtp=Função para enviar email usando SMTP
+hostAddress=Endereço do servidor
+hostPort=Porta do servidor
+protocolToSendEmail=Protocolo para envio do email (TLS, SSL ou nenhum)
+login=Login
+password=Senha
+senderMail=Email do remetente
+toRecipientMail=Email do destinatário (retorno da função para criar destinatários ou separado por virgula)
+subject=Assunto
+content=Conteúdo
+isHtml=É html?
+attachments=Anexos
